testdata/baselines/reference/compiler/emitIncompleteDoStatement.errors.txt
a.tlua(1,3): error TS1005: 'end' expected.


==== a.tlua (1 errors) ====
    do
      
!!! error TS1005: 'end' expected.